force-app/main/default/objects/Projet__c/fields/ActualCostPrice__c.field-meta.xml
<CustomField>
    <fullName>ActualCostPrice__c</fullName>
    <label>Actual Cost Price</label>
    <summarizedField>Project_Stage__c.ActualCostPrice__c</summarizedField>
    <summaryForeignKey>Project_Stage__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>