force-app/main/default/objects/Projet__c/fields/ActualMargin__c.field-meta.xml
<CustomField>
    <fullName>ActualMargin__c</fullName>
    <formula>(ActualSalesPrice__c - ActualCostPrice__c)/ ActualSalesPrice__c</formula>
    <label>Actual Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>