force-app/main/default/objects/Projet__c/fields/ActualSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>ActualSalesPrice__c</fullName>
    <label>Actual Sales Price</label>
    <summarizedField>Project_Stage__c.ActualSalesPrice__c</summarizedField>
    <summaryForeignKey>Project_Stage__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>