force-app/main/default/objects/Projet__c/fields/AllSnagsRaised__c.field-meta.xml
<CustomField>
    <fullName>AllSnagsRaised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Snags Raised</label>
    <type>Checkbox</type>
</CustomField>