force-app/main/default/objects/Projet__c/fields/AssignmentCostPrice__c.field-meta.xml
<CustomField>
    <fullName>AssignmentCostPrice__c</fullName>
    <label>Assignment Cost Price</label>
    <summarizedField>Project_Stage__c.AssignmentCostPrice__c</summarizedField>
    <summaryForeignKey>Project_Stage__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>