force-app/main/default/objects/Projet__c/fields/AssignmentSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>AssignmentSalesPrice__c</fullName>
    <label>Assignment Sales Price</label>
    <summarizedField>Project_Stage__c.AssignmentSalesPrice__c</summarizedField>
    <summaryForeignKey>Project_Stage__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>