force-app/main/default/objects/Projet__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>Actual Reception Date</label>
    <type>Date</type>
</CustomField>