force-app/main/default/objects/Projet__c/fields/EstimatedExpensesAmount__c.field-meta.xml
<CustomField>
    <fullName>EstimatedExpensesAmount__c</fullName>
    <label>Estimated Expenses Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>