force-app/main/default/objects/Projet__c/fields/ExpectedReceptionDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedReceptionDate__c</fullName>
    <label>Expected Reception Date</label>
    <type>Date</type>
</CustomField>