force-app/main/default/objects/Projet__c/fields/ExpectedStartDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedStartDate__c</fullName>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>