force-app/main/default/objects/Projet__c/fields/ExpensesRefundable__c.field-meta.xml
<CustomField>
    <fullName>ExpensesRefundable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expenses Refundable ?</label>
    <type>Checkbox</type>
</CustomField>