force-app/main/default/objects/Projet__c/fields/InitialMargin__c.field-meta.xml
<CustomField>
    <fullName>InitialMargin__c</fullName>
    <formula>( Opportunite__r.Amount -  InitialAmount__c ) / Opportunite__r.Amount</formula>
    <label>Initial Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>