force-app/main/default/objects/Projet__c/fields/NonRefundableExpensesAmount__c.field-meta.xml
<CustomField>
    <fullName>NonRefundableExpensesAmount__c</fullName>
    <label>Non-Refundable Expenses Amount (Pre-tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>