force-app/main/default/objects/Projet__c/fields/RefundableExpensesAmount__c.field-meta.xml
<CustomField>
    <fullName>RefundableExpensesAmount__c</fullName>
    <label>Refundable Expenses Amount (VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>