force-app/main/default/objects/Projet__c/fields/Rescission_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rescission_Reason__c</fullName>
    <label>Rescission Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Lost</fullName>
            </value>
            <value>
                <fullName>By the customer</fullName>
            </value>
            <value>
                <fullName>By Levana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>