force-app/main/default/objects/Projet__c/fields/Unbilled_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Unbilled_Revenue__c</fullName>
    <label>Unbilled Revenue</label>
    <summarizedField>Jalon__c.MontantHtPrevisionnel__c</summarizedField>
    <summaryFilterItems>
        <field>Jalon__c.ToBill__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Jalon__c.Projet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>