force-app/main/default/objects/Projet__c/fields/WarrantyDuration__c.field-meta.xml
<CustomField>
    <fullName>WarrantyDuration__c</fullName>
    <label>Warranty Duration (month)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>