force-app/main/default/objects/Projet__c/fields/WarrantyExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>WarrantyExpirationDate__c</fullName>
    <formula>IF(ISBLANK(DeliveryDate__c),null,  ADDMONTHS(DeliveryDate__c,WarrantyDuration__c) )</formula>
    <label>Warranty Expiration Date</label>
    <type>Date</type>
</CustomField>