force-app/main/default/objects/Projet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Statut__c</columns>
    <columns>InitialAmount__c</columns>
    <columns>TotalHtPrevisionnelJalons__c</columns>
    <columns>OpptyVSPrevisionnelProjet__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>levana</value>
    </filters>
    <label>Tout</label>
</ListView>